# WeSingOld

./: .gitignore  CMakeLists.txt  main.cpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: main.cpp
